Added interactive_histogram function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,10 @@ Date: 2015-02-28
 Author: c(
     person("Sharon", "Machlis", , "smachlis@computerworld.com", c("aut", "cre")),
     )
-Description: A few data visualization functions I've found useful over the years.
+Description: A few data visualization functions I have found useful over the years.
 Imports:
-    corrplot
+    corrplot,
+    ggvis,
+    shiny
 License: GPL-3
 LazyData: TRUE
