--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Description: A few data visualization functions I have found useful over the yea
 Imports:
     corrplot,
     ggvis,
-    shiny
+    shiny,
+    xts
 License: GPL-3
 LazyData: TRUE
